<resources>
    <string name="app_name">nicloud Factory</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="date_format_string">%1$s/%2$s/%3$s</string>
    <string name="edit">Edit</string>
    <string name="no_internet_connection">Check your connection and try again.</string>
    <string name="no_internet_connection_information">Some information can not display normally. Check your connection and try again.</string>
    <string name="retry">Retry</string>
    <string name="processing">Processing</string>
    <string name="no_equipment">No equipment</string>
    <string name="complete_task">Complete task:  %1$s</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="complete">Complete</string>
    <string name="task_status_unclaimed">Not start</string>
    <string name="task_status_pending">In schedule</string>
    <string name="task_status_wip">Working</string>
    <string name="task_status_pause">Pause</string>
    <string name="task_status_finished">Finish</string>
    <string name="task_status_in_review">In Review</string>
    <string name="task_status_warning">Warning</string>
    <string name="task_status_stop">Stop</string>
    <string name="task_status_cancel">Cancel</string>
    <string name="worker_status_off">Off</string>
    <string name="worker_status_stop">Stop</string>
    <string name="worker_status_pause">Pause</string>
    <string name="worker_status_pending">Pending</string>
    <string name="worker_status_wip">WIP</string>
    <string name="leave_type_default">Default</string>
    <string name="leave_type_personal">Personal</string>
    <string name="leave_type_medical">Medical</string>
    <string name="leave_type_annual">Annual</string>
    <string name="leave_type_official">Official</string>
    <string name="leave_type_funeral">Funeral</string>
    <string name="leave_type_maternity">Maternity</string>
    <string name="leave_type_paternity">Paternity</string>
    <string name="leave_type_menstruation">Menstruation</string>
    <string name="leave_type_compensatory">Compensatory</string>
    <string name="task_case_progress_text">Case Progress</string>
    <string name="task_case_participated_worker_text">Participated Worker</string>
    <string name="task_case_edit_text">Edit case</string>
    <string name="task_card_no_worker">No worker</string>
    <string name="worker_action_start">Start for all</string>
    <string name="worker_card_next_task_text">Next task</string>
    <string name="worker_card_overtime_text">Overtime</string>
    <string name="case_spinner_all_vendors">"All vendors"</string>
    <string name="case_vendor_selected">"Principal manufacturers"</string>
    <string name="case_worker_name">"Case officer"</string>
    <string name="case_percent_selected">"Case progress"</string>
    <string name="case_feed_date">"Feed Date"</string>
    <string name="case_sheet">"Sheet"</string>
    <string name="case_figure_date">"Figure Date"</string>
    <string name="case_model">"Model"</string>
    <string name="case_size">"Size"</string>
    <string name="case_delivery">"Delivery"</string>
    <string name="case_others">"Others"</string>
    <string name="case_task_count_in_process">"Task count int process"</string>
    <string name="case_hours_passed_by">"Hours passed by"</string>
    <string name="case_hours_unfinished">"Hours not yet completed"</string>
    <string name="case_hours_expected">"Expect delays/early hours"</string>
    <string name="case_finished">"Finished"</string>
    <string name="case_overview_edit_case">"Edit"</string>
    <string name="case_overview_edit_worker">"Edit"</string>
    <string name="case_overview_worker">"Workers"</string>
    <string name="case_overview_listview_taskitem_header_id">"ID"</string>
    <string name="case_overview_listview_taskitem_header_status">"Status"</string>
    <string name="case_overview_listview_taskitem_header_name">"Name"</string>
    <string name="case_overview_listview_taskitem_header_expect_time">"Expected time"</string>
    <string name="case_overview_listview_taskitem_header_work_time">"Work time"</string>
    <string name="case_overview_listview_taskitem_header_tool">"Tool"</string>
    <string name="case_overview_listview_taskitem_header_warning">"Warning"</string>
    <string name="case_overview_listview_taskitem_header_resposible_worker">"Duty"</string>
    <string name="case_overview_listview_taskitem_header_handle_worker">"Handle"</string>
    <string name="case_overview_listview_taskitem_header_time">"Time"</string>
    <string name="case_overview_listview_taskitem_header_description">"Description"</string>
    <string name="overview_finish_hours">"Total hours finished: <b>%d</b> hours"</string>
    <string name="overview_working_hours">"Total hours Worked: <b>%d</b> hours"</string>
    <string name="overview_overtime_hours">"Total hours overtime: <b>%d</b> hours"</string>
    <string name="overview_idle_hours">"Total hours idle: <b>%d</b> hours"</string>
    <string name="overview_display_warning_txt">"+%d"</string>
    <string-array name="week">
        <item>"Mon"</item>
        <item>"Tue"</item>
        <item>"Wed"</item>
        <item>"Thu"</item>
        <item>"Fri"</item>
        <item>"Sat"</item>
        <item>"Sun"</item>
    </string-array>
    <string name="statistics_popup_time_finish">"Finish"</string>
    <string name="statistics_popup_time_work">"Work"</string>
    <string name="statistics_popup_time_overtime">"Overtime"</string>
    <string name="statistics_popup_time_idle">"Idle"</string>
    <string name="case_ov_tab_title_task_items">"Task Items"</string>
    <string name="case_ov_tab_title_warning">"Warning"</string>
    <string name="ov_message">"Message"</string>
    <string name="ov_tab_record">"Record"</string>
    <string name="ov_tab_photo">"Photo"</string>
    <string name="ov_tab_file">"File"</string>
    <string name="ov_tab_history">"History"</string>
    <string name="ov_taskItem_listView_start_date">"Start Date"</string>
    <string name="worker_ov_all_factories">"All factories"</string>
    <string name="worker_ov_worker_address">"Address:"</string>
    <string name="worker_ov_worker_phone">"Phone:"</string>
    <string name="worker_ov_worker_tab_title_task_items">"Task Items"</string>
    <string name="worker_ov_worker_tab_title_worker_status">"Worker's status"</string>
    <string name="worker_ov_worker_tab_title_worker_attendance_status">"Attendance status"</string>
    <string name="worker_ov_edit_task_item">"Edit Item"</string>
    <string name="worker_ov_taskItem_listView_status">"Status"</string>
    <string name="worker_ov_taskItem_listView_case_name">"Case Name"</string>
    <string name="worker_ov_taskItem_listView_item_name">"Item Name"</string>
    <string name="worker_ov_taskItem_listView_expected_time">"Expected Time"</string>
    <string name="worker_ov_taskItem_listView_working_time">"Work Time"</string>
    <string name="worker_ov_taskItem_listView_tool_used">"Tool"</string>
    <string name="worker_ov_taskItem_listView_error_count">"Error"</string>
    <string name="worker_ov_taskItem_listView_warning">"Warning"</string>
    <string name="worker_ov_editText_record_hint">"Record&#8230;"</string>
    <string name="worker_ov_btn_upload">"Upload"</string>
    <string name="worker_ov_btn_capture">"Capture"</string>
    <string name="worker_ov_btn_finish_record">"Finish Record"</string>
    <string name="worker_ov_tab_all">"All"</string>
    <string name="worker_ov_tab_status_download">"Download"</string>
    <string name="worker_ov_tab_status_upload">"has uploaded"</string>
    <string name="worker_ov_tab_status_capture">"has captured"</string>
    <string name="worker_ov_tab_status_work">"go to work"</string>
    <string name="worker_ov_tab_status_off_work">"off work"</string>
    <string name="worker_ov_tab_status_plus">"+"</string>
    <string name="worker_ov_tab_status_minus">"-"</string>
    <string name="worker_ov_tab_attendance_add_leave_date">"Add leave date"</string>
    <string name="worker_ov_tab_attendance_leave_date">"Leave date"</string>
    <string name="worker_ov_tab_attendance_leave_type">"Leave type"</string>
    <string name="worker_ov_tab_attendance_leave_reason">"Leave reason"</string>
    <string name="add_case_info_header_case_name_text">Case Name</string>
    <string name="add_case_info_header_case_name_hint">Input Case Name</string>
    <string name="add_case_info_header_vendor_text">Vendor</string>
    <string name="add_case_info_header_vendor_hint">Choose Vendor</string>
    <string name="add_case_info_header_manager_pic_text">Manager PIC</string>
    <string name="add_case_info_header_manager_pic_hint">Choose Manager PIC</string>
    <string name="add_case_info_header_material_purchased_date_text">Material Purchased Date</string>
    <string name="add_case_info_header_layout_delivered_date_text">Layout Delivered Date</string>
    <string name="add_case_info_header_delivered_date_text">Delivered Date</string>
    <string name="add_case_info_header_plate_count_text">Plate Count</string>
    <string name="add_case_info_header_support_block_count_text">Support Block Count</string>
    <string name="add_case_info_header_count_hint">Choose Count</string>
    <string name="add_case_info_header_date_hint">mm/dd/yyyy</string>
    <string name="add_case_info_header_description_text">Description</string>
    <string name="add_case_info_header_description_hint">Input description</string>
    <string name="add_case_info_header_measurement_text">Measurement</string>
    <string name="add_case_info_header_measurement_x_text">x</string>
    <string name="add_case_info_header_measurement_mm_text">mm</string>
    <string name="add_case_info_header_measurement_width_hint">Width</string>
    <string name="add_case_info_header_measurement_height_hint">Height</string>
    <string name="add_case_info_header_measurement_length_hint">Length</string>
    <string name="add_case_save_case_button_text">Save Case</string>
    <string name="add_case_save_template_button_text">Save Template</string>
    <string name="detailed_worker_task_schedule_header_case">Case</string>
    <string name="detailed_worker_task_schedule_header_task">Task</string>
    <string name="detailed_worker_task_schedule_header_expected_time">Expected time</string>
    <string name="detailed_worker_task_schedule_header_equipment">Equipment</string>
    <string name="detailed_worker_task_schedule_header_expected_completed_time">Expected completed time</string>
    <string name="detailed_worker_task_schedule_header_error">Error</string>
    <string name="detailed_worker_task_schedule_header_warnings">Warnings</string>
    <string name="main_information_delay_list_title">Delay items</string>
    <string name="main_information_leave_list_title">Leaving workers (in 7 days)</string>
    <string name="main_information_list_delay_time">Delay time</string>
    <string name="main_information_list_case_name">Case name</string>
    <string name="main_information_list_worker">Worker</string>
    <string name="main_information_list_delay_time_next">Next noti. time</string>
    <string name="main_information_list_delay_time_add">Add noti. time</string>
    <string name="main_information_list_leave_workers_type">Type</string>
    <string name="main_information_list_leave_workers_worker">Worker</string>
    <string name="main_information_list_leave_workers_date">Date</string>
    <string name="worker_overview_no_attendance_text">No attendances</string>
    <string name="worker_overview_attendance_leave_date">Leave date</string>
    <string name="worker_overview_attendance_leave_time_range">Leave time</string>
    <string name="worker_overview_attendance_leave_type">Leave type</string>
    <string name="worker_overview_attendance_leave_reason">Leave reason</string>
</resources>