<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/MainInformationListHeader"
        android:background="@color/main_information_list_header_delay_background"
        android:text="@string/main_information_delay_list_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/MainInformationListTitle"
            android:text="@string/main_information_list_delay_time" />

        <TextView
            style="@style/MainInformationListTitle"
            android:text="@string/main_information_list_case_name" />

        <TextView
            style="@style/MainInformationListTitle"
            android:text="@string/main_information_list_worker" />

        <TextView
            style="@style/MainInformationListTitle"
            android:text="@string/main_information_list_delay_time_next" />

        <TextView
            style="@style/MainInformationListTitle"
            android:text="@string/main_information_list_delay_time_add" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/main_information_list_divider_color"/>

</LinearLayout>